# emmylua-analyzer-rust

./: .git-blame-ignore-revs  .gitignore  .luafmt.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SALSA_API_AND_PHASE3_PLAN.md  compilation_semantic_architecture_CN.md  typos.toml
.github/: copilot.md
.github/workflows/: build.yml  deepseek_review.yml  test.yml  upload_crates.yml
crates/emmylua_check/: Cargo.toml  README.md
crates/emmylua_code_analysis/: Cargo.toml
crates/emmylua_doc_cli/: Cargo.toml
crates/emmylua_formatter/: Cargo.toml  README.md
crates/emmylua_formatter/src/: cmd_args.rs  lib.rs  workspace.rs
crates/emmylua_formatter/src/config/: mod.rs
crates/emmylua_formatter/src/formatter/: block.rs  comment.rs  expr.rs  expression.rs  line_breaks.rs  mod.rs  model.rs  render.rs  sequence.rs  spacing.rs  statement.rs  test.rs  tokens.rs  trivia.rs
crates/emmylua_formatter/src/formatter/comments/: comment_formatter.rs  mod.rs
crates/emmylua_formatter/src/formatter/layout/: mod.rs  test.rs  tree.rs
crates/emmylua_formatter/src/formatter/range_format/: mod.rs  test.rs
crates/emmylua_formatter/src/formatter/render/: comments.rs  comments_ast.rs  control.rs  doc_comments.rs  helpers.rs  mod.rs  statements.rs  test.rs
crates/emmylua_formatter/src/formatter_new/: mod.rs  render.rs  trivia.rs
crates/emmylua_formatter/src/formatter_new/layout/: mod.rs  tree.rs
crates/emmylua_formatter/src/ir/: builder.rs  doc_ir.rs  mod.rs
crates/emmylua_formatter/src/printer/: alignment.rs  mod.rs  test.rs
crates/emmylua_formatter/src/test/: breaking_tests.rs  comment_tests.rs  config_tests.rs  expression_tests.rs  misc_tests.rs  mod.rs  statement_tests.rs  test_helper.rs
crates/emmylua_ls/: Cargo.toml
crates/emmylua_parser/: Cargo.toml
crates/emmylua_parser_desc/: Cargo.toml
crates/schema_to_emmylua/: Cargo.toml
docs/: SALSA_ARCHITECTURE.md  semantic_model_refactor_plan_CN.md  summary_builder_semantic_plan_CN.md  type_compilation_migration_architecture_CN.md
docs/architecture/: compilation_semantic_architecture_CN.md  salsa_direction.md  summary_api_entrypoints.md
docs/config/: emmyrc_json_CN.md  emmyrc_json_EN.md
docs/emmylua_formatter/: README_CN.md  README_EN.md  examples_CN.md  (+7 more)
nix/: packages.nix
(+742 files in other folders)
